# Capstone-Course-Projects

bootloader_lab/: Makefile
bootloader_lab/arm/: gdb-config
bootloader_lab/arm/outputs/: arm-bootloader.elf
bootloader_lab/arm/src/: arm-bootloader.s  arm-mini.s
bootloader_lab/x86/: gdb-config
bootloader_lab/x86/outputs/: x86-bootloader.elf
bootloader_lab/x86/src/: x86-bootloader.s  x86-mini.s
driver_lab/References/: Easy Raspberry Pi Pico Microcontroller C _ C++ Programming on Windows.mhtml
driver_lab/files/libraries/: CMakeLists.txt  LIS3DH.cpp  LIS3DH.h
driver_lab/files/src/: level.cpp
elected_lab/: Cargo.toml  README.md
elected_lab/src/: animations.rs  main.rs  working.txt
rust/elected_lab/: Cargo.toml
rust/elected_lab/src/: main.rs  usb_manager.rs
rust/feather-rp2040-rs-template/._git/: packed-refs
rust/feather-rp2040-rs-template/._git/logs/refs/heads/: main
rust/feather-rp2040-rs-template/._git/objects/pack/: pack-87eac12d5790ecf3e44a8c2b3e8ab60b3158eb52.idx  pack-87eac12d5790ecf3e44a8c2b3e8ab60b3158eb52.pack
rust/feather-rp2040-rs-template/._git/refs/heads/: main
rust_lab/feather-rp2040-rs-template/._git/: config  index
rust_lab/feather-rp2040-rs-template/.cargo/: config
test/: CMakeLists.txt  README.md  driver_lab-1.tar  driver_lab-1.tgz  driver_lab-1.tgz:Zone.Identifier
test/elected_lab/src/: usb_manager.rs
test/libraries/: neomatrix.cpp  neomatrix.h
test/src/: level.cpp
